--- a/source/standards/accounts-with-third-parties.html.md.erb
+++ b/source/standards/accounts-with-third-parties.html.md.erb
@@ -1,12 +1,12 @@
 ---
 title: How to manage access to your third-party service accounts
-last_reviewed_on: 2025-03-04
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
 # <%= current_page.data.title %>
 
-Your MHCLG team probably uses third-party tools to develop a service, such as [GitHub](#managing-github-accounts) and [logit](#managing-logit-accounts). Follow this guidance to manage access to any associated accounts.
+Your MHCLG team probably uses third-party tools to develop a service, such as [GitHub](#managing-github-accounts). Follow this guidance to manage access to any associated accounts.
 
 When managing third-party service accounts ensure:
 
