Final DNS and WAF page changes

--- a/source/standards/dns-hosting.html.md.erb
+++ b/source/standards/dns-hosting.html.md.erb
@@ -8,7 +8,6 @@ review_in: 12 months
 
 To ensure users can connect to your service, you'll need accurate Domain Name System (DNS) records and a DNS provider to supply your DNS nameservers.
 
-DNS is managed centrally by the [Cloud Platforms team](https://mhclg.sharepoint.com.mcas.ms/sites/CloudPlatforms/SitePages/What-do-we-offer-.aspx) and you will need approval from the [Technical Design Authority (TDA)](https://mhclg.sharepoint.com.mcas.ms/sites/TechnicalDesignAuthorityPublic) for any new domains and nameserver delegation.
+DNS is managed centrally by the [Cloud Platforms team](https://mhclg.sharepoint.com.mcas.ms/sites/CloudPlatforms/SitePages/What-do-we-offer-.aspx) and you will need approval from the [Technical Design Authority (TDA)](https://mhclg.sharepoint.com.mcas.ms/sites/TechnicalDesignAuthorityPublic) for any new domains and nameserver delegation. You can make a request on [ServiceNow](https://mhclg.service-now.com.mcas.ms/sp?id=sc_category) using the general request form.
 
-If you are building a service that faces the public you should be using a gov.uk domain, which requires you to pass a service assessment.  You can read more about [gov.uk service domains and DNS](https://www.gov.uk/service-manual/technology/get-a-domain-name) in the Service Manual.
-g
+If you are building a service that faces the public you should be using a service.gov.uk domain, which requires you to pass a service assessment.  You can read more about [service.gov.uk domains and DNS](https://www.gov.uk/service-manual/technology/get-a-domain-name) in the Service Manual.
