Update credentials page

--- a/source/standards/storing-credentials.html.md.erb
+++ b/source/standards/storing-credentials.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to store credentials
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
@@ -18,10 +18,7 @@ If you are unable to use your browser's password manager then you should use a t
 
 Third-party password managers used by people at MHCLG include:
 
-- [**1Password**](https://1password.com/)
-- [**BitWarden**](https://bitwarden.com/) - An open source password manager.
-- [**KeePassXC**](https://keepassxc.org/) - An offline password store, which you may want to backup somewhere.
-- [**QtPass**](https://qtpass.org/) - Another offline store, integrated with Git and GPG / pass.
+- [**1Password**](https://1password.com/) - for Administrator credentials
 
 There is a security trade-off involved in using browser extensions to autofill credentials.
 
@@ -33,17 +30,7 @@ Credentials sometimes need to be shared across a team or programme. Software rep
 
 [You should follow the guidance for managing team credentials.](/standards/accounts-with-third-parties.html).
 
-We have no established best practice for storing shared credentials at MHCLG. Some teams have a "credentials" GitHub repository and use [pass](https://www.passwordstore.org/) or [blackbox](https://github.com/StackExchange/blackbox) to store credentials encrypted with GPG.
-
-<%= warning_text('Make sure you configure the repo as <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/about-repository-visibility">internal or ideally private</a> to help prevent accidental disclosure') %>
-
-Investigate alternatives before adopting GPG-based credential stores for new teams.
-
-- We cannot revoke access to GPG-based credentials unless we change them. Anyone with access can still decrypt credentials using their local copy of the repo and its commit history.
-
-- It creates a high barrier to entry as GPG tools are [generally difficult to use](https://latacora.micro.blog/2019/07/16/the-pgp-problem.html) and key-servers are unreliable.
-
-The GOV.UK Design System and Prototype Kit teams have recently set up a [Bitwarden](https://bitwarden.com) organisation as a replacement for their credentials repository.
+Where team or shared credentials are needed, MHCLG uses 1Password. [See department guidance for 1Passeword](https://mhclg.sharepoint.com.mcas.ms/sites/MyIT2/SitePages/1Password.aspx).
 
 ## Service credentials
 
@@ -51,4 +38,6 @@ Deployed services sometimes need sensitive configuration such as API keys and IP
 
 Use the secret management feature of your infrastructure or cloud provider e.g. [AWS Secrets Manager](https://aws.amazon.com/secrets-manager/getting-started/), [HashiCorp Vault](https://www.vaultproject.io/). This should make it easy to control and audit access to the credentials.
 
-Older projects in MHCLG might have a "secrets" repository and use GPG to encrypt files, which are then decrypted during the deployment process. This approach should not be used unless there is no better option.
+Other third-party services in use by MHCLG to manage secrets include:
+- Github Secrets for Github Actions
+- Azure Key Vault
