--- a/source/partials/_nav-hosting-infrastructure.html.erb
+++ b/source/partials/_nav-hosting-infrastructure.html.erb
@@ -6,4 +6,5 @@
   <li><a href="/manuals/security-overview-for-websites.html">Security overview for websites</a></li>
   <li><a href="/standards/cloud-tagging.html">Tagging cloud resources</a></li>
   <li><a href="/manuals/working-with-aws-accounts.html">Working with AWS accounts</a></li>
+  <li><a href="/standards/working-with-azure-accounts.html">Working with Azure accounts</a></li>
 </ul>
