--- a/source/standards/hosting.html.md.erb
+++ b/source/standards/hosting.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to host a service
-last_reviewed_on: 2025-03-25
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
@@ -10,9 +10,11 @@ In MHCLG, we use [Amazon Web Services (AWS)](https://aws.amazon.com) and [Micros
 
 We follow the [Government Cloud First policy](https://www.gov.uk/guidance/government-cloud-first-policy) and use AWS and Azure managed cloud services and Infrastructure as a Service (IaaS) solutions to host our services rather than using our own hardware.
 
-## See also
+## AWS
 
-* [MHCLG Cloud Platform Teams](https://mhclg.sharepoint.com/sites/CloudPlatforms/SitePages/Principles.aspx)
-* [Working with AWS accounts](/manuals/working-with-aws-accounts.html)
-* [Tagging AWS resources](/standards/cloud-tagging.html)
-* [Use configuration management](/standards/configuration-management.html)
+For information on how AWS is used and configured in MHCLG, see the [Cloud Platforms Team’s AWS guidance](https://mhclg.sharepoint.com.mcas.ms/sites/CloudPlatforms/SitePages/Amazon-Web-Services-(AWS).aspx).
+
+
+## Azure
+
+For information on how Azure is used and configured in MHCLG, see the [Cloud Platforms Team’s Azure guidance](https://mhclg.sharepoint.com.mcas.ms/sites/CloudPlatforms/SitePages/Azure-Platform-Overview.aspx).
