Add missing full stop

--- a/source/standards/how-to-do-penetration-tests.html.md.erb
+++ b/source/standards/how-to-do-penetration-tests.html.md.erb
@@ -68,7 +68,7 @@ To prepare your test environment you should:
 * notify your service providers in advance. Note that in most cases AWS/ Azure do not require advance permission for penetration tests on your applications
 * give the tester a distribution list of approved report recipients
 
-Prior to the test, it may be beneficial to meet the lead tester and the MHCLG [Cyber Security Team] to discuss the test and confirm that all the prerequisites and necessary access are in place
+Prior to the test, it may be beneficial to meet the lead tester and the MHCLG [Cyber Security Team] to discuss the test and confirm that all the prerequisites and necessary access are in place.
 
 ## During the Test
 The lead tester should draw your attention and that of the [Cyber Security Team] to any critical vulnerabilities immediately identified.
