--- a/source/standards/user-support.html.md.erb
+++ b/source/standards/user-support.html.md.erb
@@ -1,19 +1,15 @@
 ---
 title: How MHCLG provides user support
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
 # <%= current_page.data.title %>
 
-The Support Operations team help MHCLG service teams respond to user enquiries, providing 1st line support for many teams within MHCLG including [GOV.UK](https://www.gov.uk/) and [GOV.UK Verify](https://www.gov.uk/government/publications/introducing-govuk-verify/introducing-govuk-verify).
+## JIRA Service Desk
 
-## Zendesk
-
-Support Operations require MHCLG teams to use [Zendesk](https://www.zendesk.com/) to manage communications with service users. Support Operations work with MHCLG teams to help manage Zendesk setup and configuration, for example with:
-
-- choosing agent types, groups and ‘pass-through’ to other government departments
-- [General Data Protection Regulation (GDPR)](https://ico.org.uk/for-organisations/guide-to-data-protection/guide-to-the-general-data-protection-regulation-gdpr/) considerations, such as data disclosure and data retention
+MHCLG services use [JIRA Service Desk](https://www.atlassian.com/software/jira/service-management/features/service-desk) to manage communications with service users.
+There is a [dedicated Service Now request to set up a new JIRA Project](https://mhclg.service-now.com/sp_mhclg?id=sc_cat_item&sys_id=8a4ff0dd1bdfd21063df43b6b04bcb53) that can be configured to include JIRA Service Desk.
 
 ## Support lines for your service
 
@@ -22,6 +18,8 @@ MHCLG teams provide support in 3 groups, known as ‘lines’, for each product.
 ### 1st line user support
 
 1st line support provide resolution for basic user enquiries and triage frequent, repeatable incidents. For example, issues signing in.
+
+Several teams leverage an ongoing contract for [XBP Europe's contact centre](https://xbpeurope.com/solutions/contact-centre-services/) to handle phone calls and to triage incoming JIRA Service Desk tickets.
 
 ### 2nd line technical support
 
@@ -39,7 +37,8 @@ Understanding your service’s routes into support will make sure support and pr
 
 ## Support hours and support rotas
 
-Document and share your support team’s operating hours. Many MHCLG teams operate a rota for their 2nd line support and escalation contacts.
+Document and share your support team’s operating hours. Many MHCLG teams operate a rota for their 2nd line support; most
+MHCLG teams offer support on a 9-5 basis rather than 24 hours.
 
 ## Further reading
 
@@ -48,6 +47,6 @@ To find out more about user support and incident management read how to:
 * [set up and manage user support](https://www.gov.uk/service-manual/helping-people-to-use-your-service/set-up-and-manage-user-support) in the Service Manual
 * [manage technical incidents](incident-management.html) for your service
 
-## Contact Support Operations
+## Get help with Atlassian
 
-Contact the Support Operations team using the [#user-support Slack channel](https://gds.slack.com/messages/CADFJBDQU/details/#).
+Contact the Atlassian team at MHCLG using the [#atlassian-help Slack channel](https://communities-govuk.slack.com/archives/C06M10KSACF).
