--- a/source/standards/principle-least-access.html.md.erb
+++ b/source/standards/principle-least-access.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Principle of Least Privilege
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
@@ -8,7 +8,7 @@ review_in: 6 months
 
 The [principle of least privilege][polp] involves setting up user accounts so they can only access and use the information they need for specific tasks. This can also apply to processes and individuals who might have to switch between normal access and the increased access of a superuser account as part of their work.
 
-All access provisioned for use within MHCLG must be provided on a least privilege basis
+All access provisioned for use within MHCLG must be provided on a least privilege basis.
 
 Examples of privileged or higher security access are:
 
@@ -37,13 +37,6 @@ Your team should:
 - ensure approval and use of privileged accounts is kept to the absolute minimum necessary for a user to perform their job role
 - in cases where JIT access is not implemented for users with privileged access that have critical business impact, implement a documeneted periodic review (cadence to be defined) of the need to continually have these privileged access granted to confirmed users
 - have a Joiners, Movers and Leavers process, where line managers (or equivalent) arrange for privileged access to be removed (SLA to be defined) where it is not required. See this [NCSC guide on identity management](https://www.ncsc.gov.uk/guidance/introduction-identity-and-access-management) for more information.
-
-## Examples
-
-For human-readable secrets, such as a username and password, you should set up a separate secret or [password manager](https://www.ncsc.gov.uk/collection/passwords/password-manager-buyers-guide). 
-
-If you’re using the gds-users account to log into your AWS accounts, you should assume a read-only role by default. You should only assume an admin role when absolutely necessary for a specific task. You should set up the admin account so that the session timeout is less than 12 hours. You should send the audit trail of admin access to the Cyber Security team. Use the Cyber Security Slack channel ([#cyber-security-help](https://gds.slack.com/archives/CCMPJKFDK)) to set up the audit trail.
-
 
 ## Further Guidance
 
