--- a/source/standards/how-to-do-penetration-tests.html.md.erb
+++ b/source/standards/how-to-do-penetration-tests.html.md.erb
@@ -26,7 +26,7 @@ An IT Health Check or security review can include:
 * external network penetration tests
 * firewall rulebase/ruleset reviews
 * server build reviews
-* networking and networking device [Access Control List (ACL)][ACL] reviews
+* networking and networking device Access Control List (ACL) reviews
 * code reviews
 * infrastructure-as-code reviews
 * AWS/ Azure configuration reviews
@@ -84,6 +84,5 @@ Teams should work with the [Cyber Security Team], who can give advice, consult o
 
 [GDPR]: https://commission.europa.eu/law/law-topic/data-protection/reform/what-personal-data_en
 [National Cyber Security Centre (NCSC) CHECK scheme]: https://www.ncsc.gov.uk/information/using-check-provider
-[ACL]: /standards/secrets-acl.html
 [Cyber Security Team]: https://intranet.communities.gov.uk/task/find-teams/corporate/digital/cyber-security/
 
