--- a/source/manuals/browser-support.html.md.erb
+++ b/source/manuals/browser-support.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Supporting different browsers
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 12 months
 owner_slack: '#mhclg-way'
 ---
@@ -9,6 +9,6 @@ owner_slack: '#mhclg-way'
 
 Test your service in [the browsers listed in the Service Manual](https://www.gov.uk/service-manual/technology/designing-for-different-browsers-and-devices).
 
-Internal facing services should prioritise Edge, as this is the only offered browser available within MHCLG.
+Internal facing services should prioritise Edge, as this is the only browser available within MHCLG.
 
 You should also [test your service with assistive technologies](/manuals/accessibility.html#testing-with-assistive-technologies).
