Review "Secret auditing"
This all seems like good advice, let's keep it.

--- a/source/standards/secrets-auditing.html.md.erb
+++ b/source/standards/secrets-auditing.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Secret Auditing
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-25
 review_in: 6 months
 ---
 # <%= current_page.data.title %>
@@ -23,7 +23,7 @@ You may wish to carry out secrets auditing if you want to:
 
 - understand who has access to which secrets, and evaluate whether this is appropriate for your security model
 - be able to provide evidence someone has gained access to some secrets to understand the impact of a security breach
-- confirm whether your onboarding/offboarding processes are working as intended (particularly in evolving privilege for movers)
+- confirm whether your onboarding/offboarding processes are working as intended (particularly involving privilege for movers)
 - have confidence in rotating secrets
 - see who has encrypted or decrypted a secret
 - create alerts when sensitive secrets are being accessed
@@ -39,7 +39,7 @@ Your team should:
   - this should include use of high risk secrets, such as break-glass accounts or root
 - look for any opportunities to replace secrets with ephemeral tokens, such as moving from hard coded AWS secrets in GitHub Actions to using OpenID Connect.
 - consider using [Github's Secret Scanning] features, as well as using their [Partner Program] features
-- consider whether your use of secrets can be reduced by relying on e.g. automated CI/CD processes (such as Terraform etc)
+- consider whether your use of secrets can be reduced by relying on e.g. automated CI/CD processes (such as Terraform, etc.)
 
 You should be conscious of the impacts of automated secrets rotation on service users. There may also be legal/contractual obligations to consider if you are changing how you manage user secrets.
 
