Put Google SRE paradigm pages into own subsection with introductory overview

--- a/source/standards/sre/slo.html.md.erb
+++ b/source/standards/sre/slo.html.md.erb
@@ -1,10 +1,25 @@
 ---
 title: Make data-driven decisions with service level objectives
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
 # <%= current_page.data.title %>
+
+### Glossary of terms
+
+<dl>
+  <dt>SLI</dt>
+  <dd>Service level indicator - a carefully defined quantitative measure of some aspect of the level of service that is provided<dd>
+  <dt>SLO</dt>
+  <dd>Service level objective - a target value or range of values for a service level that is measured by an SLI<dd>
+  <dt>SLA</dt>
+  <dd>Service level agreement - an explicit or implicit contract with the users of your service<dd>
+</dl>
+
+For more detailed discussion of SLOs, SLIs, and SLAs, please consult [chapter 4 of the online Google SRE book](https://sre.google/sre-book/service-level-objectives/).
+
+## Service level objectives (SLOs)
 
 Service level objectives (SLOs) set out a target level for your service’s reliability. Using SLOs helps you make data-driven decisions about the [opportunity cost](https://www.investopedia.com/terms/o/opportunitycost.asp) of reliability work.
 
