--- a/source/standards/pre-commit-hooks.html.md.erb
+++ b/source/standards/pre-commit-hooks.html.md.erb
@@ -1,16 +1,16 @@
 ---
 title: Git Pre-commit Hooks
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 3 months
 ---
 # <%= current_page.data.title %>
 
-> The guidance on this page is no longer valid, and is [due to be updated](https://github.com/alphagov/gds-way/issues/839).
+[Git hooks](https://githooks.com/) are scripts that Git executes before or after events such as commit, push, and receive.
 
-[Git hooks](https://githooks.com/) are scripts that Git executes before or after events such as commit, push, and receive. Pre-commit hooks are useful in detecting secrets automatically before developers commit work locally on their machines.
+Pre-commit hooks are useful in detecting secrets automatically before developers commit work locally on their machines.
+MHCLG recommends a pre-commit git hook called [Detect Secrets](https://github.com/Yelp/detect-secrets) for preventing secrets being commited to git.
 
-The Cabinet Office Digital Cyber Security team has recommended a pre-commit git hook called [Detect Secrets](https://github.com/Yelp/detect-secrets) for preventing secrets being commited to git.
+[Github](https://docs.github.com/en/code-security/secret-scanning/working-with-secret-scanning-and-push-protection) also now offers secret scanning and push protection for certain repositories.
 
 ## Further guidance
 - [Git hooks](https://githooks.com/)
-- [Cabinet Office Digital Cyber Security pre-commit install guidance](https://github.com/alphagov/gds-pre-commit)
