Fix typo and link to azure key vault

--- a/source/standards/storing-credentials.html.md.erb
+++ b/source/standards/storing-credentials.html.md.erb
@@ -30,14 +30,13 @@ Credentials sometimes need to be shared across a team or programme. Software rep
 
 [You should follow the guidance for managing team credentials.](/standards/accounts-with-third-parties.html).
 
-Where team or shared credentials are needed, MHCLG uses 1Password. [See department guidance for 1Passeword](https://mhclg.sharepoint.com.mcas.ms/sites/MyIT2/SitePages/1Password.aspx).
+Where team or shared credentials are needed, MHCLG uses 1Password. [See department guidance for 1Password](https://mhclg.sharepoint.com.mcas.ms/sites/MyIT2/SitePages/1Password.aspx).
 
 ## Service credentials
 
 Deployed services sometimes need sensitive configuration such as API keys and IP block lists.
 
-Use the secret management feature of your infrastructure or cloud provider e.g. [AWS Secrets Manager](https://aws.amazon.com/secrets-manager/getting-started/), [HashiCorp Vault](https://www.vaultproject.io/). This should make it easy to control and audit access to the credentials.
+Use the secret management feature of your infrastructure or cloud provider e.g. [AWS Secrets Manager](https://aws.amazon.com/secrets-manager/getting-started/), [Azure Key Vault](https://azure.microsoft.com/en-us/products/key-vault). This should make it easy to control and audit access to the credentials.
 
 Other third-party services in use by MHCLG to manage secrets include:
 - Github Secrets for Github Actions
-- Azure Key Vault
