Review Programming Languages & Style guides
- Rename style guides to 'Style guides' in the stub and architecture
to differentiate from 'programming languages' and update all relevant
links
- Drop JS, TS and Kotlin style guide pages - decision on the mobbing
day to drop these pages as they were either stubs or too prescriptive
and teams who use these languages can add to the pages rather than us
maintaining old stub pages or leaving to-dos across the site.

--- a/source/manuals/code-review-guidelines.html.md.erb
+++ b/source/manuals/code-review-guidelines.html.md.erb
@@ -95,7 +95,7 @@ Find out more about writing and reviewing pull requests on the [Pull requests pa
 [GitHub review]: https://docs.github.com/en/github/collaborating-with-pull-requests/reviewing-changes-in-pull-requests/about-pull-request-reviews
 [pull requests (PRs)]: https://docs.github.com/en/github/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests
 [technical debt]: /standards/technical-debt.html
-[programming language style guides]: /manuals/programming-languages.html
+[programming language style guides]: /manuals/style-guides.html
 [open source]: /standards/publish-opensource-code.html
 [how to manage third party software dependencies here]: /standards/tracking-dependencies.html
 [deploying software]: https://www.gov.uk/service-manual/technology/deploying-software-regularly
