--- a/source/standards/tracking-dependencies.html.md.erb
+++ b/source/standards/tracking-dependencies.html.md.erb
@@ -45,7 +45,7 @@ Like dependencies, Docker base images are also frequently updated. If you run co
 ### Specifying Docker image tags
 
 The MHCLG Way Dockerfile guidance contains advice on how
-to use [Docker image tags](/manuals/programming-languages/docker.html#using-tags-and-digests-in-from-instructions)
+to use [Docker image tags](/manuals/style-guides/docker.html#using-tags-and-digests-in-from-instructions)
 to specify the exact container image version to use.
 
 ### Use official Docker base images
@@ -60,12 +60,12 @@ Also consider managed solutions where possible. For example:
 
 * Consider managed container orchestration technology such as [AWS Fargate][] or similar so you do not have to monitor for vulnerabilities in your OS or control plane
 
-[Dependabot's auto-approve-and-merge facility]: https://docs.github.com/en/code-security/supply-chain-security/keeping-your-dependencies-updated-automatically/automating-dependabot-with-github-actions
+[Dependabot’s auto-approve-and-merge facility]: https://docs.github.com/en/code-security/supply-chain-security/keeping-your-dependencies-updated-automatically/automating-dependabot-with-github-actions
 [security-only updates provided automatically by GitHub Dependabot]: https://docs.github.com/en/code-security/supply-chain-security/managing-vulnerabilities-in-your-projects-dependencies/about-alerts-for-vulnerable-dependencies
 [MHCLG supported programming languages]: /standards/programming-languages.html#content
 [managing software dependencies in the Service Manual]: https://www.gov.uk/service-manual/technology/managing-software-dependencies
-[programming language style guides]: /manuals/programming-languages.html
-[managing Python dependencies]: /manuals/programming-languages/python.html#dependencies
+[programming language style guides]: /manuals/style-guides.html
+[managing Python dependencies]: /manuals/style-guides/python.html#dependencies
 
 [continuous delivery]: /standards/continuous-delivery.html
 [Dependabot]: https://dependabot.com/
