--- a/source/partials/_nav-software-development.html.erb
+++ b/source/partials/_nav-software-development.html.erb
@@ -1,7 +1,7 @@
 <ul>
   <li><a href="/standards/naming-software-products.html">How to name software products</a></li>
   <li><a href="/standards/programming-languages.html">Choosing a programming language</a></li>
-  <li><a href="/manuals/programming-languages.html">Style guides</a></li>
+  <li><a href="/manuals/style-guides.html">Style guides</a></li>
   <li><a href="/standards/tracking-dependencies.html">How to manage third party software dependencies</a></li>
   <li><a href="/manuals/accessibility.html">Building accessible services</a></li>
   <li><a href="/standards/pair-programming.html">Pair programming</a></li>
