Review "third party deps" page and reword style guide ref

--- a/source/standards/tracking-dependencies.html.md.erb
+++ b/source/standards/tracking-dependencies.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to manage third party software dependencies
-last_reviewed_on: 2025-07-09
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
@@ -12,7 +12,7 @@ Any automated tools you use to manage third party dependencies should be compati
 
 You can read more about [managing software dependencies in the Service Manual][], where you will find a list of common dependency management tools.
 
-Our [programming language style guides][] also contain language-specific advice about managing dependencies (for example, [managing Python dependencies][]).
+Some of our [programming language style guides][] also contain language-specific advice about managing dependencies (for example, [managing Python dependencies][]).
 
 ## Update dependencies frequently
 
